--- a/index.html
+++ b/index.html
@@ -1,267 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>bolt</title>
+    <style>
+        :root {
+            --bg-color: #2c313c;
+            --text-main: #ffffff;
+            --text-secondary: #a0a0a0;
+            --accent-blue: #7289da;
+            --button-bg: rgba(255, 255, 255, 0.1);
+        }
 
-  <title>Stare</title>
-  <meta name="description" content="A minimalist &amp; effective multi-purpose bot to sustain any community" />
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            background: radial-gradient(circle at center, #3e4452 0%, #1e2127 100%);
+            color: var(--text-main);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        }
 
-  <link rel="icon" type="image/png"
-        href="https://cdn.discordapp.com/avatars/1472023540227117322/e6f4fd26eef8fd9b7c47dcccb979ba5f.png?size=128" />
+        .container {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
 
-  <!-- Preload fonts (optional but nice) -->
-  <link rel="preload" href="assets/font/Poppins-s.p.59d7d3d1.ttf" as="font" type="font/ttf" crossorigin />
-  <link rel="preload" href="assets/font/1b99372b3eaef0c8-s.p.758e15a8.woff2" as="font" type="font/woff2" crossorigin />
+        /* Top Navigation Bar */
+        .top-nav {
+            position: absolute;
+            top: 20px;
+            background: rgba(0, 0, 0, 0.3);
+            padding: 8px 16px;
+            border-radius: 20px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            font-size: 0.9rem;
+            backdrop-filter: blur(10px);
+        }
 
-  <!-- Your main stylesheet -->
-  <link rel="stylesheet" href="main.css" />
+        .top-nav img {
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+        }
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Stare" />
-  <meta property="og:description" content="A minimalist &amp; effective multi-purpose bot to sustain any community" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://stare.lat" />
-  <meta property="og:locale" content="en_US" />
-  <meta property="og:image" content="https://cdn.discordapp.com/avatars/1472023540227117322/e6f4fd26eef8fd9b7c47dcccb979ba5f.png?size=512" />
-  <meta property="og:image:width" content="512" />
-  <meta property="og:image:height" content="512" />
-  <meta property="og:image:alt" content="Stare" />
+        .nav-link {
+            color: var(--text-secondary);
+            text-decoration: none;
+            transition: color 0.2s;
+        }
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Stare" />
-  <meta name="twitter:description" content="A minimalist &amp; effective multi-purpose bot to sustain any community" />
-  <meta name="twitter:image" content="https://cdn.discordapp.com/avatars/1472023540227117322/e6f4fd26eef8fd9b7c47dcccb979ba5f.png?size=512" />
+        .nav-link:hover {
+            color: var(--text-main);
+        }
 
-  <!-- Small extras your original had -->
-  <style>
-    @keyframes ping {
-      75%, 100% { transform: scale(2); opacity: 0; }
-    }
-    .animate-ping { animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite; }
+        /* Hero Section */
+        .hero {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 5px;
+        }
 
-    .gradient-text {
-      background: linear-gradient(135deg, #5486d2 0%, #ffffff 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
+        .pfp {
+            width: 80px;
+            height: 80px;
+            border-radius: 12px;
+            object-fit: cover;
+            box-shadow: 0 8px 24px rgba(0,0,0,0.3);
+        }
 
-    .page-transition {
-      position: fixed;
-      inset: 0;
-      z-index: 9999;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #1b1919;
-      pointer-events: none;
-      opacity: 0;
-      transition: opacity 0.4s ease-in-out;
-    }
-    .page-transition.active { opacity: 1; pointer-events: all; }
-    .page-transition.fade-out { opacity: 0; }
+        .title {
+            font-size: 3rem;
+            font-weight: 500;
+            color: #b0c4de;
+            letter-spacing: -1px;
+        }
 
-    .transition-logo {
-      width: 180px;
-      height: 180px;
-      border-radius: 36px;
-      box-shadow: 0 30px 80px rgba(84, 134, 210, 0.4);
-      opacity: 0;
-    }
-    .page-transition.active .transition-logo {
-      animation: smoothBounce 1s ease-out forwards;
-    }
-    @keyframes smoothBounce {
-      0%   { transform: scale(0.5) translateY(-100px); opacity: 0; }
-      50%  { transform: scale(1.05) translateY(10px); opacity: 1; }
-      65%  { transform: scale(0.98) translateY(-5px); opacity: 1; }
-      80%  { transform: scale(1.01) translateY(2px); opacity: 1; }
-      100% { transform: scale(1) translateY(0); opacity: 1; }
-    }
-  </style>
+        /* Stats Section */
+        .stats {
+            color: var(--text-secondary);
+            font-size: 1rem;
+            font-weight: 300;
+        }
+
+        .stats b {
+            color: var(--text-main);
+            font-weight: 600;
+        }
+
+        /* Buttons */
+        .button-group {
+            display: flex;
+            gap: 12px;
+            margin-top: 10px;
+        }
+
+        .btn {
+            background: var(--button-bg);
+            color: var(--text-main);
+            border: none;
+            padding: 10px 20px;
+            border-radius: 8px;
+            font-size: 0.9rem;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            text-decoration: none;
+            transition: background 0.2s;
+            border: 1px solid rgba(255,255,255,0.05);
+        }
+
+        .btn:hover {
+            background: rgba(255, 255, 255, 0.15);
+        }
+
+        .btn svg {
+            width: 16px;
+            height: 16px;
+            opacity: 0.7;
+        }
+    </style>
 </head>
+<body>
 
-<body class="poppins_e80daf66-module__P7FDNG__variable outfit_1e488516-module__whKORa__variable antialiased">
-  <div class="min-h-screen relative overflow-hidden">
-
-    <!-- Background gradient canvas -->
-    <canvas id="gradient-canvas" data-transition-in="true"
-            class="fixed inset-0 w-full h-full"
-            style="opacity:0.4;display:block"></canvas>
-
-    <!-- Top Nav -->
-    <nav class="fixed top-2 sm:top-4 left-1/2 -translate-x-1/2 z-50 w-full max-w-3xl mx-auto px-2 sm:px-4">
-      <ul id="navbar"
-          class="dynamic-island relative flex items-center gap-2 px-4 overflow-hidden rounded-full transition-all duration-500 bg-black/40 backdrop-blur-md border border-white/10 shadow-xl w-fit h-14 sm:h-14 mx-auto">
-
-        <li class="flex items-center h-12">
-          <a class="flex items-center hover:opacity-80 transition-opacity px-1" href="index.html">
-            <div class="w-7 h-7 sm:w-8 sm:h-8 rounded-full overflow-hidden flex items-center justify-center">
-              <img
-                src="https://cdn.discordapp.com/avatars/1472023540227117322/e6f4fd26eef8fd9b7c47dcccb979ba5f.png?size=128"
-                alt="stare logo"
-                class="w-full h-full object-cover"
-                crossorigin="anonymous"
-              />
-            </div>
-          </a>
-        </li>
-
-        <div class="h-6 w-px bg-white/20 mx-1"></div>
-
-        <div id="navItems" class="flex items-center gap-2 transition-all duration-500">
-          <li class="flex items-center h-12">
-            <a class="relative px-4 py-2 text-sm transition-colors group flex items-center text-white/80 hover:text-white"
-               href="commands.html">
-              <span class="relative z-10">Commands</span>
-              <span class="absolute inset-0 rounded-full opacity-0 group-hover:opacity-100 bg-white/10 transition-opacity"></span>
-            </a>
-          </li>
-
-          <li class="flex items-center h-12">
-            <a class="relative px-4 py-2 text-sm transition-colors group flex items-center text-white/80 hover:text-white"
-               href="status.html">
-              <span class="relative z-10">Status</span>
-              <span class="absolute inset-0 rounded-full opacity-0 group-hover:opacity-100 bg-white/10 transition-opacity"></span>
-            </a>
-          </li>
-
-          <li class="flex items-center h-12">
-            <a class="relative px-4 py-2 text-sm transition-colors group flex items-center text-white/80 hover:text-white"
-               href="privacy.html">
-              <span class="relative z-10">Privacy</span>
-              <span class="absolute inset-0 rounded-full opacity-0 group-hover:opacity-100 bg-white/10 transition-opacity"></span>
-            </a>
-          </li>
-
-          <li class="flex items-center h-12">
-            <a class="relative px-4 py-2 text-sm transition-colors group flex items-center text-white/80 hover:text-white"
-               href="terms.html">
-              <span class="relative z-10">Terms</span>
-              <span class="absolute inset-0 rounded-full opacity-0 group-hover:opacity-100 bg-white/10 transition-opacity"></span>
-            </a>
-          </li>
-        </div>
-
-        <div class="h-6 w-px bg-white/20 mx-1"></div>
-
-        <li class="flex items-center h-12">
-          <a class="relative px-4 py-2 text-sm transition-colors group flex items-center text-white/90 hover:text-white"
-             href="https://discord.com/oauth2/authorize"
-             target="_blank" rel="noopener noreferrer">
-            <span class="relative z-10">Invite</span>
-            <span class="absolute inset-0 rounded-full opacity-0 group-hover:opacity-100 bg-white/10 transition-opacity"></span>
-          </a>
-        </li>
-      </ul>
+    <nav class="top-nav">
+        <img src="pfp.png" alt="logo">
+        <a href="#" class="nav-link">Commands</a>
+        <a href="#" class="nav-link">Status</a>
+        <a href="#" class="nav-link">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
+        </a>
     </nav>
 
-    <!-- Hero -->
-    <main class="relative z-10 max-w-6xl mx-auto px-4 sm:px-4 pt-24 sm:pt-24 lg:pt-[104px]">
-      <section class="py-20 sm:py-24 text-center">
-        <div class="mx-auto max-w-3xl">
-          <div class="inline-flex items-center gap-2 bg-white/5 border border-white/10 rounded-full px-4 py-2 mb-6">
-            <span class="relative flex h-2 w-2">
-              <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
-              <span class="relative inline-flex rounded-full h-2 w-2 bg-green-400"></span>
-            </span>
-            <span class="text-sm text-white/80">Online &amp; ready</span>
-          </div>
+    <div class="container">
+        <div class="hero">
+            <img src="pfp.png" alt="bolt" class="pfp">
+            <h1 class="title">bolt</h1>
+        </div>
 
-          <h1 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-bold tracking-[-0.03em] mb-4">
-            <span class="gradient-text">Stare</span>
-          </h1>
+        <p class="stats">Sustaining <b>412</b> users across <b>4</b> guilds.</p>
 
-          <p class="text-base sm:text-lg md:text-xl text-white/70 leading-relaxed mb-12">
-            A minimalist &amp; effective multi-purpose bot to sustain any community.
-          </p>
-
-          <div class="flex flex-col sm:flex-row items-center justify-center gap-3 sm:gap-6">
-            <a href="https://discord.com/oauth2/authorize"
-               target="_blank" rel="noopener noreferrer"
-               class="inline-flex items-center justify-center px-5 py-3 rounded-xl bg-[#5865F2] hover:bg-[#4752C4] active:bg-[#4752C4] transition-colors shadow-xl">
-              <span class="font-semibold text-white">Invite to Discord</span>
+        <div class="button-group">
+            <a href="#" class="btn">
+                <span>Invite</span>
             </a>
-
-            <a href="commands.html"
-               class="inline-flex items-center justify-center px-5 py-3 rounded-xl bg-white/10 hover:bg-white/20 active:bg-white/10 transition-colors border border-white/10 hover:border-white/20">
-              <span class="font-semibold text-white">View Commands</span>
+            <a href="#" class="btn">
+                <span>View Commands</span>
             </a>
-          </div>
         </div>
-      </section>
-
-      <!-- Features -->
-      <section class="pb-20 sm:pb-24">
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
-          <div class="rounded-2xl border border-white/10 bg-black/40 backdrop-blur-md p-6 hover:-translate-y-0.5 transition-all duration-300 ease-out shadow-xl">
-            <h3 class="text-xl font-semibold text-white mb-2">Moderation</h3>
-            <p class="text-white/70 leading-relaxed">Keep chats clean with simple, effective tools.</p>
-          </div>
-
-          <div class="rounded-2xl border border-white/10 bg-black/40 backdrop-blur-md p-6 hover:-translate-y-0.5 transition-all duration-300 ease-out shadow-xl">
-            <h3 class="text-xl font-semibold text-white mb-2">Utility</h3>
-            <p class="text-white/70 leading-relaxed">Quality-of-life commands your members actually use.</p>
-          </div>
-
-          <div class="rounded-2xl border border-white/10 bg-black/40 backdrop-blur-md p-6 hover:-translate-y-0.5 transition-all duration-300 ease-out shadow-xl">
-            <h3 class="text-xl font-semibold text-white mb-2">Fast</h3>
-            <p class="text-white/70 leading-relaxed">Minimal design, quick responses, low clutter.</p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Footer -->
-      <footer class="py-10 border-t border-white/10">
-        <div class="flex flex-col md:flex-row items-center justify-between gap-4">
-          <div class="text-sm text-white/60">
-            © <span id="year"></span> Stare. All rights reserved.
-          </div>
-
-          <div class="flex items-center gap-4 text-sm text-white/70">
-            <a class="hover:text-white transition-colors" href="privacy.html">Privacy</a>
-            <a class="hover:text-white transition-colors" href="terms.html">Terms</a>
-            <a class="hover:text-white transition-colors" href="status.html">Status</a>
-          </div>
-        </div>
-      </footer>
-    </main>
-
-    <!-- Page transition overlay (optional) -->
-    <div id="pageTransition" class="page-transition" aria-hidden="true">
-      <img
-        class="transition-logo"
-        src="https://cdn.discordapp.com/avatars/1472023540227117322/e6f4fd26eef8fd9b7c47dcccb979ba5f.png?size=512"
-        alt="Stare"
-        crossorigin="anonymous"
-      />
     </div>
 
-  </div>
-
-  <script>
-    // Footer year
-    document.getElementById("year").textContent = new Date().getFullYear();
-
-    // Optional: page transition helper
-    const transition = document.getElementById("pageTransition");
-    document.querySelectorAll("a[href]").forEach(a => {
-      const href = a.getAttribute("href") || "";
-      const isExternal = href.startsWith("http");
-      const isBlank = a.getAttribute("target") === "_blank";
-      if (isExternal || isBlank || href.startsWith("#") || href.startsWith("mailto:")) return;
-
-      a.addEventListener("click", (e) => {
-        e.preventDefault();
-        transition.classList.add("active");
-        setTimeout(() => {
-          transition.classList.add("fade-out");
-          window.location.href = href;
-        }, 450);
-      });
-    });
-  </script>
 </body>
 </html>
