--- a/index.html
+++ b/index.html
@@ -6,57 +6,58 @@
     <title>bolt</title>
     <style>
         :root {
-            --bg-color: #2c313c;
+            --bg-dark: #1e2127;
+            --bg-light: #3e4452;
             --text-main: #ffffff;
-            --text-secondary: #a0a0a0;
-            --accent-blue: #7289da;
-            --button-bg: rgba(255, 255, 255, 0.1);
+            --text-muted: #a0a0a0;
+            --btn-bg: rgba(255, 255, 255, 0.08);
+            --btn-hover: rgba(255, 255, 255, 0.15);
         }
 
         body, html {
             margin: 0;
             padding: 0;
+            width: 100%;
             height: 100%;
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            background: radial-gradient(circle at center, #3e4452 0%, #1e2127 100%);
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            background: radial-gradient(circle at center, var(--bg-light) 0%, var(--bg-dark) 100%);
             color: var(--text-main);
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
         }
 
-        .container {
-            text-align: center;
+        /* Nav Bar - Floating and Centered */
+        .nav-container {
+            position: absolute;
+            top: 30px;
+            width: 100%;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
+        }
+
+        .top-nav {
+            background: rgba(0, 0, 0, 0.25);
+            backdrop-filter: blur(12px);
+            padding: 10px 24px;
+            border-radius: 30px;
+            display: flex;
             align-items: center;
             gap: 20px;
-        }
-
-        /* Top Navigation Bar */
-        .top-nav {
-            position: absolute;
-            top: 20px;
-            background: rgba(0, 0, 0, 0.3);
-            padding: 8px 16px;
-            border-radius: 20px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            font-size: 0.9rem;
-            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
         }
 
         .top-nav img {
-            width: 24px;
-            height: 24px;
+            width: 28px;
+            height: 28px;
             border-radius: 50%;
         }
 
         .nav-link {
-            color: var(--text-secondary);
+            color: var(--text-muted);
             text-decoration: none;
+            font-size: 0.95rem;
+            font-weight: 500;
             transition: color 0.2s;
         }
 
@@ -64,103 +65,107 @@
             color: var(--text-main);
         }
 
-        /* Hero Section */
-        .hero {
+        /* Main Content - Full Width Space */
+        .content {
+            width: 100%;
+            max-width: 1200px;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .hero-section {
             display: flex;
+            justify-content: center;
             align-items: center;
-            gap: 15px;
-            margin-bottom: 5px;
+            gap: 20px;
+            margin-bottom: 25px;
         }
 
-        .pfp {
-            width: 80px;
-            height: 80px;
-            border-radius: 12px;
+        .pfp-large {
+            width: 100px;
+            height: 100px;
+            border-radius: 18px;
             object-fit: cover;
-            box-shadow: 0 8px 24px rgba(0,0,0,0.3);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.4);
         }
 
-        .title {
-            font-size: 3rem;
-            font-weight: 500;
-            color: #b0c4de;
-            letter-spacing: -1px;
+        .brand-name {
+            font-size: 4rem;
+            font-weight: 600;
+            letter-spacing: -2px;
+            color: #d1d9e6;
+            margin: 0;
         }
 
-        /* Stats Section */
-        .stats {
-            color: var(--text-secondary);
-            font-size: 1rem;
-            font-weight: 300;
+        .stats-text {
+            color: var(--text-muted);
+            font-size: 1.1rem;
+            margin-bottom: 30px;
         }
 
-        .stats b {
+        .stats-text span {
             color: var(--text-main);
             font-weight: 600;
         }
 
-        /* Buttons */
-        .button-group {
+        /* Buttons Grouping */
+        .actions {
             display: flex;
-            gap: 12px;
-            margin-top: 10px;
+            justify-content: center;
+            gap: 15px;
         }
 
         .btn {
-            background: var(--button-bg);
+            background: var(--btn-bg);
             color: var(--text-main);
-            border: none;
-            padding: 10px 20px;
-            border-radius: 8px;
-            font-size: 0.9rem;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            gap: 8px;
+            padding: 12px 28px;
+            border-radius: 10px;
             text-decoration: none;
-            transition: background 0.2s;
-            border: 1px solid rgba(255,255,255,0.05);
+            font-size: 1rem;
+            transition: all 0.2s ease;
+            border: 1px solid rgba(255, 255, 255, 0.05);
         }
 
         .btn:hover {
-            background: rgba(255, 255, 255, 0.15);
+            background: var(--btn-hover);
+            transform: translateY(-2px);
         }
 
-        .btn svg {
-            width: 16px;
-            height: 16px;
-            opacity: 0.7;
+        /* Responsive Fix for Mobile */
+        @media (max-width: 600px) {
+            .brand-name { font-size: 3rem; }
+            .hero-section { flex-direction: column; }
         }
     </style>
 </head>
 <body>
 
-    <nav class="top-nav">
-        <img src="pfp.png" alt="logo">
-        <a href="#" class="nav-link">Commands</a>
-        <a href="#" class="nav-link">Status</a>
-        <a href="#" class="nav-link">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
-        </a>
-    </nav>
-
-    <div class="container">
-        <div class="hero">
-            <img src="pfp.png" alt="bolt" class="pfp">
-            <h1 class="title">bolt</h1>
-        </div>
-
-        <p class="stats">Sustaining <b>412</b> users across <b>4</b> guilds.</p>
-
-        <div class="button-group">
-            <a href="#" class="btn">
-                <span>Invite</span>
+    <div class="nav-container">
+        <nav class="top-nav">
+            <img src="pfp.png" alt="logo">
+            <a href="#" class="nav-link">Commands</a>
+            <a href="#" class="nav-link">Status</a>
+            <a href="#" class="nav-link">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" style="display: block;">
+                    <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
+                </svg>
             </a>
-            <a href="#" class="btn">
-                <span>View Commands</span>
-            </a>
-        </div>
+        </nav>
     </div>
+
+    <main class="content">
+        <div class="hero-section">
+            <img src="pfp.png" alt="bolt avatar" class="pfp-large">
+            <h1 class="brand-name">bolt</h1>
+        </div>
+
+        <p class="stats-text">Sustaining <span>412</span> users across <span>4</span> guilds.</p>
+
+        <div class="actions">
+            <a href="#" class="btn">Invite</a>
+            <a href="#" class="btn">View Commands</a>
+        </div>
+    </main>
 
 </body>
 </html>
