--- a/index.html
+++ b/index.html
@@ -7,165 +7,177 @@
     <style>
         :root {
             --bg-dark: #1e2127;
-            --bg-light: #3e4452;
+            --bg-accent: #2c313c;
             --text-main: #ffffff;
             --text-muted: #a0a0a0;
-            --btn-bg: rgba(255, 255, 255, 0.08);
-            --btn-hover: rgba(255, 255, 255, 0.15);
+            --btn-bg: rgba(255, 255, 255, 0.07);
+            --btn-border: rgba(255, 255, 255, 0.1);
         }
 
-        body, html {
+        /* Animated Background */
+        body {
             margin: 0;
             padding: 0;
             width: 100%;
-            height: 100%;
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-            background: radial-gradient(circle at center, var(--bg-light) 0%, var(--bg-dark) 100%);
+            height: 100vh;
+            font-family: 'Inter', -apple-system, system-ui, sans-serif;
             color: var(--text-main);
             display: flex;
             justify-content: center;
             align-items: center;
+            overflow: hidden;
+            background: linear-gradient(-45deg, #1e2127, #2c313c, #1a1d23, #323844);
+            background-size: 400% 400%;
+            animation: gradientMove 15s ease infinite;
         }
 
-        /* Nav Bar - Floating and Centered */
-        .nav-container {
+        @keyframes gradientMove {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Navbar */
+        .nav-wrapper {
             position: absolute;
-            top: 30px;
+            top: 40px;
             width: 100%;
             display: flex;
             justify-content: center;
         }
 
         .top-nav {
-            background: rgba(0, 0, 0, 0.25);
-            backdrop-filter: blur(12px);
-            padding: 10px 24px;
-            border-radius: 30px;
+            background: rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(15px);
+            padding: 8px 20px;
+            border-radius: 20px;
             display: flex;
             align-items: center;
-            gap: 20px;
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            gap: 18px;
+            border: 1px solid var(--btn-border);
         }
 
         .top-nav img {
-            width: 28px;
-            height: 28px;
+            width: 24px;
+            height: 24px;
             border-radius: 50%;
         }
 
         .nav-link {
             color: var(--text-muted);
             text-decoration: none;
-            font-size: 0.95rem;
-            font-weight: 500;
+            font-size: 0.9rem;
             transition: color 0.2s;
         }
 
-        .nav-link:hover {
-            color: var(--text-main);
-        }
+        .nav-link:hover { color: var(--text-main); }
 
-        /* Main Content - Full Width Space */
-        .content {
-            width: 100%;
-            max-width: 1200px;
+        /* Main Content */
+        .container {
             text-align: center;
-            padding: 20px;
+            max-width: 600px;
         }
 
-        .hero-section {
+        .hero {
             display: flex;
-            justify-content: center;
             align-items: center;
-            gap: 20px;
-            margin-bottom: 25px;
-        }
-
-        .pfp-large {
-            width: 100px;
-            height: 100px;
-            border-radius: 18px;
-            object-fit: cover;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-        }
-
-        .brand-name {
-            font-size: 4rem;
-            font-weight: 600;
-            letter-spacing: -2px;
-            color: #d1d9e6;
-            margin: 0;
-        }
-
-        .stats-text {
-            color: var(--text-muted);
-            font-size: 1.1rem;
+            justify-content: center;
+            gap: 24px;
             margin-bottom: 30px;
         }
 
-        .stats-text span {
-            color: var(--text-main);
-            font-weight: 600;
+        .pfp {
+            width: 110px;
+            height: 110px;
+            border-radius: 20px;
+            object-fit: cover;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.4);
         }
 
-        /* Buttons Grouping */
-        .actions {
+        .brand {
+            font-size: 4.5rem;
+            font-weight: 700;
+            letter-spacing: -2px;
+            color: #eceff4;
+            margin: 0;
+        }
+
+        .stats {
+            color: var(--text-muted);
+            font-size: 1.05rem;
+            margin-bottom: 40px;
+            letter-spacing: 0.2px;
+        }
+
+        .stats b { color: #fff; font-weight: 600; }
+
+        /* Buttons matching your reference images */
+        .btn-group {
             display: flex;
             justify-content: center;
-            gap: 15px;
+            gap: 16px;
         }
 
         .btn {
             background: var(--btn-bg);
             color: var(--text-main);
-            padding: 12px 28px;
-            border-radius: 10px;
+            padding: 14px 28px;
+            border-radius: 12px;
             text-decoration: none;
             font-size: 1rem;
+            font-weight: 500;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            border: 1px solid var(--btn-border);
             transition: all 0.2s ease;
-            border: 1px solid rgba(255, 255, 255, 0.05);
         }
 
         .btn:hover {
-            background: var(--btn-hover);
-            transform: translateY(-2px);
+            background: rgba(255, 255, 255, 0.12);
+            border-color: rgba(255, 255, 255, 0.3);
+            transform: translateY(-1px);
         }
 
-        /* Responsive Fix for Mobile */
-        @media (max-width: 600px) {
-            .brand-name { font-size: 3rem; }
-            .hero-section { flex-direction: column; }
+        .btn svg {
+            width: 20px;
+            height: 20px;
+            opacity: 0.9;
         }
     </style>
 </head>
 <body>
 
-    <div class="nav-container">
+    <div class="nav-wrapper">
         <nav class="top-nav">
             <img src="pfp.png" alt="logo">
             <a href="#" class="nav-link">Commands</a>
             <a href="#" class="nav-link">Status</a>
             <a href="#" class="nav-link">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" style="display: block;">
-                    <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/>
-                </svg>
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
             </a>
         </nav>
     </div>
 
-    <main class="content">
-        <div class="hero-section">
-            <img src="pfp.png" alt="bolt avatar" class="pfp-large">
-            <h1 class="brand-name">bolt</h1>
+    <div class="container">
+        <div class="hero">
+            <img src="pfp.png" alt="bolt" class="pfp">
+            <h1 class="brand">bolt</h1>
         </div>
 
-        <p class="stats-text">Sustaining <span>412</span> users across <span>4</span> guilds.</p>
+        <p class="stats">Sustaining <b>412</b> users across <b>4</b> guilds.</p>
 
-        <div class="actions">
-            <a href="#" class="btn">Invite</a>
-            <a href="#" class="btn">View Commands</a>
+        <div class="btn-group">
+            <a href="#" class="btn">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/></svg>
+                Invite
+            </a>
+            <a href="#" class="btn">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M8 6h13M8 12h13M8 18h13M3 6h.01M3 12h.01M3 18h.01"/></svg>
+                View Commands
+            </a>
         </div>
-    </main>
+    </div>
 
 </body>
 </html>
