--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             --accent-glow: rgba(114, 137, 218, 0.6);
             --text-main: #ffffff;
             --text-muted: #b0b0b0;
+            --nav-bg: rgba(0, 0, 0, 0.4);
         }
 
         /* 1. Ultra-Dynamic Background */
@@ -43,7 +44,67 @@
             50% { transform: scale(1.1); }
         }
 
-        /* 2. Floating UI Animation */
+        /* 2. Animated Navbar */
+        .nav-container {
+            position: absolute;
+            top: 30px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            z-index: 100;
+        }
+
+        .navbar {
+            background: var(--nav-bg);
+            backdrop-filter: blur(20px);
+            padding: 12px 30px;
+            border-radius: 50px;
+            display: flex;
+            align-items: center;
+            gap: 25px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            animation: navSlideDown 1s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
+        }
+
+        @keyframes navSlideDown {
+            from { transform: translateY(-100px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+
+        .nav-logo {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            transition: transform 0.3s ease;
+        }
+
+        .nav-logo:hover { transform: rotate(360deg) scale(1.2); }
+
+        .nav-links {
+            display: flex;
+            gap: 20px;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .nav-item {
+            color: var(--text-muted);
+            text-decoration: none;
+            font-size: 0.95rem;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .nav-item:hover {
+            color: #fff;
+            transform: scale(1.1);
+            text-shadow: 0 0 8px var(--accent-glow);
+        }
+
+        /* 3. Floating UI Animation */
         @keyframes float {
             0%, 100% { transform: translateY(0px); }
             50% { transform: translateY(-15px); }
@@ -55,7 +116,7 @@
             z-index: 10;
         }
 
-        /* 3. Text Glow & Shimmer */
+        /* 4. Text Glow & Shimmer */
         .brand {
             font-size: 6rem;
             font-weight: 900;
@@ -73,7 +134,7 @@
             to { background-position: 200% center; }
         }
 
-        /* 4. Staggered Entrance */
+        /* 5. Staggered Entrance */
         @keyframes revealPop {
             0% { opacity: 0; transform: scale(0.8) translateY(30px); filter: blur(10px); }
             100% { opacity: 1; transform: scale(1) translateY(0); filter: blur(0); }
@@ -84,9 +145,9 @@
             animation: revealPop 0.8s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
         }
 
-        .delay-1 { animation-delay: 0.2s; }
-        .delay-2 { animation-delay: 0.4s; }
-        .delay-3 { animation-delay: 0.6s; }
+        .delay-1 { animation-delay: 0.4s; }
+        .delay-2 { animation-delay: 0.6s; }
+        .delay-3 { animation-delay: 0.8s; }
 
         /* Buttons with Hover Ripple */
         .btn-group {
@@ -106,7 +167,6 @@
             font-weight: 700;
             border: 1px solid rgba(255,255,255,0.1);
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            position: relative;
             overflow: hidden;
         }
 
@@ -117,7 +177,6 @@
             box-shadow: 0 0 30px var(--accent-glow);
         }
 
-        /* Avatar Rotation */
         .pfp {
             width: 140px;
             height: 140px;
@@ -126,9 +185,7 @@
             transition: transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
-        .pfp:hover {
-            transform: rotate(10deg) scale(1.1);
-        }
+        .pfp:hover { transform: rotate(10deg) scale(1.1); }
 
         .hero {
             display: flex;
@@ -140,6 +197,21 @@
     </style>
 </head>
 <body>
+
+    <header class="nav-container">
+        <nav class="navbar">
+            <img src="pfp.png" alt="bolt logo" class="nav-logo">
+            <div class="nav-links">
+                <a href="#" class="nav-item">Home</a>
+                <a href="#" class="nav-item">Commands</a>
+                <a href="#" class="nav-item">Premium</a>
+                <a href="#" class="nav-item">Support</a>
+            </div>
+            <a href="#" class="nav-item" style="display: flex; align-items: center;">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.196.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
+            </a>
+        </nav>
+    </header>
 
     <div class="main-wrapper">
         <div class="hero animate delay-1">
